[package]
name = "game_engine_core"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = "The main loop of a game engine."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "Apache-2.0"
exclude = ["doc"]
repository = "https://github.com/jojolepro/game_engine_core/"

[dependencies]
game_clock = { version = "1.0.0" }
spin_sleep = "1.0.0"
game_state_machine = { path = "../game_state_machine" }
derive-new = "0.5.8"
